helpers/compliant_np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enforced-network-policy
  namespace: <namespace_name>
spec:
  podSelector: {}  # Selects all pods in namespace B
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: target-namespace  # Match label of namespace A

      podSelector:
        matchLabels:
          app: myapp      
    ports:
    - protocol: TCP
      port: 80
